<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="#D9F1EB">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvHeading"
        android:text="@string/transaction"
        android:textSize="30sp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:padding="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/llFrom"
        android:backgroundTint="@color/white"
        android:background="@drawable/rounded_item"
        android:padding="15dp"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Any-Account"
            android:id="@+id/tvFromAccountType"
            android:textSize="20sp"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="IBANIBANIBANIBANIBANIBAN"
            android:textSize="15sp"
            android:id="@+id/tvIban"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="€ 5 100,70"
            android:textSize="30sp"
            android:id="@+id/tvFromBalance"
            android:textColor="@color/green"
            android:textStyle="bold"
            android:gravity="end"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#51000000"
            android:layout_marginBottom="5dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/available"
                android:textSize="15sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="€ 8000,00"
                android:textSize="15sp"
                android:id="@+id/tvAvailableAmount"
                android:gravity="end"/>

        </LinearLayout>




    </LinearLayout>

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_arrow_downward_black_100dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:background="@drawable/rounded_item"
        android:layout_marginBottom="20dp"
        android:padding="15dp">

        <TableRow
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="Transfer To"
                android:textColor="@color/blue"
                android:textStyle="bold"/>

        </TableRow>
        <TableRow
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/iban"
                android:layout_weight="1"
                android:textStyle="bold"/>

            <AutoCompleteTextView
                android:textSize="15sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:gravity="end"
                android:id="@+id/actvIban"
                android:layout_weight="50"/>

        </TableRow>
        <TableRow
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/amount"
                android:layout_weight="1"
                android:textStyle="bold"/>

            <EditText
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textColor="@color/blue"
                android:textStyle="bold"
                android:inputType="numberDecimal"
                android:id="@+id/edToAmount"
                android:layout_weight="50"/>

        </TableRow>


    </TableLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/transfer_now"
        android:background="@drawable/rounded_item"
        android:id="@+id/btTransfer"
        android:backgroundTint="@color/green"/>


</LinearLayout>